<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recipe_card_border">

    <ImageView
        android:id="@+id/detail_step_image"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/detail_step_number"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/step_description" />

    <TextView
        android:id="@+id/detail_step_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/detail_step_short_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_amount"
        app:layout_constraintTop_toBottomOf="@+id/detail_step_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>