    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:orientation="vertical"
        android:id="@+id/appwidget_layout"
        android:gravity="center">

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="2dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_gravity="left" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/appwidget_ingredient_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/appwidget_ingredient_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/appwidget_ingredient_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/appwidget_ingredient_name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/appwidget_ingredient_name5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/appwidget_ingredient_name6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/appwidget_ingredient_name7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/appwidget_ingredient_name8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/appwidget_ingredient_name9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp">

        <TextView
            android:id="@+id/appwidget_ingredient_amount10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="@string/step_short_description"
            android:background="@drawable/simple_border"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/appwidget_ingredient_name10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_number"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>
